Run Prettier on Codebase
