# openapi.yaml
@@ -4,7 +4,6 @@ info:
   version: 1.0.0
   description: API specifications
 
-
 servers:
   - url: http://localhost:8080
     description: Local development server
@@ -12,7 +11,7 @@ paths:
   /signup:
     post:
       tags:
-      - Authentication
+        - Authentication
       summary: User signup
       requestBody:
         required: true
@@ -29,7 +28,7 @@ paths:
                 - username
                 - password
       responses:
-        '201':
+        "201":
           description: Successful signup
           content:
             application/json:
@@ -39,7 +38,7 @@ paths:
                   message:
                     type: string
                     example: User created successfully
-        '400':
+        "400":
           description: Bad request
           content:
             application/json:
@@ -51,10 +50,9 @@ paths:
                     example: Invalid signup data
 
   /login:
-    
     post:
       tags:
-      - Authentication
+        - Authentication
       summary: User login
       requestBody:
         required: true
@@ -71,7 +69,7 @@ paths:
                 - username
                 - password
       responses:
-        '200':
+        "200":
           description: Successful login
           content:
             application/json:
@@ -80,7 +78,7 @@ paths:
                 properties:
                   token:
                     type: string
-        '401':
+        "401":
           description: Unauthorized
           content:
             application/json:
@@ -93,10 +91,10 @@ paths:
   /posts:
     get:
       tags:
-      - Posts
+        - Posts
       summary: Retrieve a list of posts
       responses:
-        '200':
+        "200":
           description: A list of posts
           content:
             application/json:
@@ -114,7 +112,7 @@ paths:
                     image:
                       type: string
                       format: binary
-        '500':
+        "500":
           description: Server error
           content:
             application/json:
@@ -126,8 +124,8 @@ paths:
                     example: Internal server error
     post:
       tags:
-      - Posts
-      summary: Create a new post  
+        - Posts
+      summary: Create a new post
       requestBody:
         required: true
         content:
@@ -146,7 +144,7 @@ paths:
                 - title
                 - content
       responses:
-        '201':
+        "201":
           description: Post created successfully
           content:
             application/json:
@@ -156,7 +154,7 @@ paths:
                   id:
                     type: integer
 
-        '400':
+        "400":
           description: Bad request
           content:
             application/json:
@@ -166,7 +164,7 @@ paths:
                   error:
                     type: string
                     example: Invalid post data
-        '500':
+        "500":
           description: Server error
           content:
             application/json:
@@ -179,7 +177,7 @@ paths:
   /posts/{id}:
     get:
       tags:
-      - Posts
+        - Posts
       summary: Retrieve a specific post by ID
       parameters:
         - in: path
@@ -188,7 +186,7 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: A single post
           content:
             application/json:
@@ -204,7 +202,7 @@ paths:
                   image:
                     type: string
                     format: binary
-        '404':
+        "404":
           description: Post not found
           content:
             application/json:
@@ -214,7 +212,7 @@ paths:
                   error:
                     type: string
                     example: Post not found
-        '500':
+        "500":
           description: Server error
           content:
             application/json:
@@ -226,7 +224,7 @@ paths:
                     example: Internal server error
     delete:
       tags:
-      - Posts
+        - Posts
       summary: Delete a specific post by ID
       parameters:
         - in: path
@@ -235,9 +233,9 @@ paths:
           schema:
             type: integer
       responses:
-        '204':
+        "204":
           description: Post deleted successfully
-        '404':
+        "404":
           description: Post not found
           content:
             application/json:
@@ -247,7 +245,7 @@ paths:
                   error:
                     type: string
                     example: Post not found
-        '500':
+        "500":
           description: Server error
           content:
             application/json:
@@ -259,7 +257,7 @@ paths:
                     example: Internal server error
     put:
       tags:
-      - Posts
+        - Posts
       summary: Update a specific post by ID
       parameters:
         - in: path
@@ -285,7 +283,7 @@ paths:
                 - title
                 - content
       responses:
-        '200':
+        "200":
           description: Post updated successfully
           content:
             application/json:
@@ -298,7 +296,7 @@ paths:
                     type: string
                   content:
                     type: string
-        '400':
+        "400":
           description: Bad request
           content:
             application/json:
@@ -308,7 +306,7 @@ paths:
                   error:
                     type: string
                     example: Invalid post data
-        '404':
+        "404":
           description: Post not found
           content:
             application/json:
@@ -318,7 +316,7 @@ paths:
                   error:
                     type: string
                     example: Post not found
-        '500':
+        "500":
           description: Server error
           content:
             application/json:
@@ -331,7 +329,7 @@ paths:
   /posts/images/{filename}:
     get:
       tags:
-      - Posts
+        - Posts
       summary: Retrieve an image by filename
       parameters:
         - in: path
@@ -340,7 +338,7 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: Image file
           content:
             image/png:
@@ -351,7 +349,7 @@ paths:
               schema:
                 type: string
                 format: binary
-        '404':
+        "404":
           description: Image not found
           content:
             application/json:
@@ -361,7 +359,7 @@ paths:
                   error:
                     type: string
                     example: Image not found
-        '500':
+        "500":
           description: Server error
           content:
             application/json:
